docs/grammar.ebnf
(* Milo Language Grammar — EBNF *)
(*
   Derived from src/parser.ts, and gated by tests/grammar.test.ts: every quoted
   word-terminal below must be a real keyword or primitive type name, every keyword the
   lexer knows must appear here, and every symbol terminal must be a token the lexer can
   produce. Before that gate this file described a "Phase 1 subset" that had stopped
   matching the language years earlier — no struct, enum, match, impl, trait, import or
   closure, and a `-> type` return arrow the parser has never accepted.

   Not expressible in EBNF, enforced by the checker: `pub` may not mark an import or an
   impl; `decreases` is meaningless on a struct; a repr'd enum's variants carry no
   payload; `&x` is not an expression (borrows are implicit at call sites).
*)

program     = { attribute | declaration } ;

declaration = import_decl
            | [ "pub" ] ( struct_decl | enum_decl | fn_decl | extern_decl
                        | trait_decl | interface_decl | type_alias | global_decl
                        | derive_decl )
            | impl_decl ;

(* ── User-defined derives ── *)
(* `derive Trait { … }` declares the body a `@derive(Trait)` expands to. The body is NOT
   parsed here: it is a template, and a hole like the field-name one is not an expression
   until a field name has been substituted for it, so the parser only balances braces. The
   holes are `@Self`, `@SelfStr`, `@count`, and — inside a `@fields { … }` repetition —
   `@name`, `@nameStr`, `@type`, `@typeStr`, `@index`; each also substitutes inside a
   string or f-string literal. After substitution the result must parse as the body of an
   `impl Trait for Struct` block, so a template can express nothing hand-written code
   cannot. `@fields` is the only control construct and repeats over a list whose length the
   struct declaration fixes, so expansion always terminates. *)
derive_decl = "derive" IDENT "{" balanced_tokens "}" ;
balanced_tokens = { TOKEN | "{" balanced_tokens "}" } ;

(* ── Imports ── *)
(* There is no glob form and no bare `import "path"`; the resolver picks a platform arm
   by filename suffix (std/x.darwin.milo), so the path never names one. *)
import_decl = "from" STRING "import" "{" import_name { "," import_name } [ "," ] "}" ;
import_name = IDENT [ "as" IDENT ] ;

(* ── Attributes ── *)
(* `@!name` is a file-level directive (e.g. @!wrapping); `@name` decorates the next
   declaration or, inside an extern struct, the next field. *)
attribute   = "@" [ "!" ] IDENT [ "(" attribute_arg { "," attribute_arg } ")" ] ;
attribute_arg = IDENT | STRING ;

(* ── Types ── *)
(* A reference type is only legal in parameter position (second-class references).
   A LEADING "?" makes it a nullable extern reference (`?&mut T` / `?&T`), which is
   narrower still: it is legal only on a parameter of an `extern` / `@externalLinkage`
   fn, where it is a spelling for the C type `T *`. Note the two positions of "?" mean
   different things — a trailing one is `Option<T>` shorthand. *)
type        = nullable_ref | [ "&" [ "mut" ] ] base_type [ "?" ] ;
nullable_ref = "?" "&" [ "mut" ] type_name ;
base_type   = "*" base_type                                  (* raw pointer, unsafe only *)
            | "[" type [ ";" INT ] "]"                       (* array; sized or slice *)
            | "(" [ type { "," type } ] ")" "=>" type        (* function type *)
            | "extern" "(" [ type { "," type } ] ")" "=>" type
            | type_name [ type_args ] [ range_bound ] ;
type_name   = "i8" | "i16" | "i32" | "i64" | "int"
            | "u8" | "byte" | "u16" | "u32" | "u64"
            | "f32" | "f64" | "float"
            | "bool" | "string" | "void" | IDENT ;
type_args   = "<" type { "," type } ">" ;
range_bound = "(" [ "-" ] INT ".." [ "-" ] INT ")" ;         (* ranged integer: i32(0..100) *)

(* ── Declarations ── *)
struct_decl = "struct" IDENT [ type_params ] "{" { [ attribute ] IDENT ":" type [ "," ] } "}"
              { contract } ;
enum_decl   = "enum" IDENT [ type_params ] [ ":" IDENT ] "{" { enum_variant [ "," ] } "}" ;
enum_variant = IDENT [ "(" type { "," type } ")" ] [ "=" [ "-" ] INT ] ;

fn_decl     = "fn" IDENT [ type_params ] "(" [ param_list ] ")" [ ":" type ]
              { contract } block ;
extern_decl = "extern" ( extern_fn | extern_struct | extern_type ) ;
extern_fn   = "fn" IDENT "(" [ param_list ] ")" [ ":" type ] ;
extern_struct = "struct" IDENT "{" { [ attribute ] IDENT ":" type [ "," ] } "}" ;
extern_type = "type" IDENT ;                                 (* opaque handle *)

trait_decl  = "trait" IDENT [ ":" IDENT { "+" IDENT } ] "{" { trait_method } "}" ;
(* A trait method may carry its own type parameters; an interface method may not —
   an interface dispatches through a vtable, and a generic method has one address per
   instantiation rather than one to put in a slot. *)
trait_method = "fn" IDENT [ type_params ] "(" [ param_list ] ")" [ ":" type ] [ block ] ;
interface_method = "fn" IDENT "(" [ param_list ] ")" [ ":" type ] [ block ] ;
interface_decl = "interface" IDENT "{" { interface_method } "}" ;
impl_decl   = [ "unsafe" ] "impl" IDENT [ "for" IDENT ] "{" { fn_decl } "}" ;

type_alias  = "type" IDENT [ type_params ] "=" type ;   (* parameters: expanded, not instantiated *)
global_decl = [ "thread_local" ] ( "let" | "var" ) IDENT [ ":" type ] "=" expr ;

type_params = "<" IDENT [ ":" IDENT { "+" IDENT } ] { "," IDENT [ ":" IDENT { "+" IDENT } ] } ">" ;
param_list  = param { "," param } [ "," "..." ] ;            (* "..." only on extern fns *)
param       = [ "&" [ "mut" ] ] IDENT ":" type ;
contract    = ( "requires" | "ensures" | "invariant" | "decreases" ) expr ;

(* ── Statements ── *)
(* ';' is cosmetic: statements are delimited by the grammar, and a stray ';' at a
   statement boundary is a no-op. Inside an expression it is an error. *)
block       = "{" { ";" | statement } "}" ;
statement   = let_decl | var_decl | return_stmt | if_stmt | while_stmt | for_stmt
            | match_stmt | unsafe_block | "break" | "continue" | assign_stmt | expr ;
(* Two `else` forms: with a pattern it is the enum let-else, and with a bare IDENT it
   unwraps a nullable extern reference (the else block runs when C passed null). Both
   require the else block to diverge. A bare IDENT with a type annotation takes no else. *)
let_decl    = "let" ( IDENT [ ":" type ] | pattern ) "=" expr [ "else" block ] ;
var_decl    = "var" IDENT [ ":" type ] "=" expr ;
return_stmt = "return" [ expr ] ;
if_stmt     = "if" ( expr | "let" pattern "=" expr ) block [ "else" ( if_stmt | block ) ] ;
while_stmt  = "while" expr { loop_contract } block ;
for_stmt    = "for" IDENT [ "," IDENT ] "in" expr { loop_contract } block ;
loop_contract = ( "invariant" | "decreases" ) expr ;
match_stmt  = "match" expr "{" { match_arm } "}" ;
match_arm   = pattern "=>" ( expr | block ) [ "," ] ;
unsafe_block = "unsafe" block ;
assign_stmt = expr ( "=" | "+=" | "-=" | "*=" | "/=" | "%=" | "&=" | "|=" | "^=" ) expr ;

pattern     = "_"
            | [ "-" ] ( INT | FLOAT ) | STRING | CHAR | "true" | "false"
            | IDENT [ "." IDENT ] [ "(" [ IDENT { "," IDENT } ] ")" ] ;

(* ── Expressions, loosest binding first ── *)
expr        = coalesce ;
coalesce    = or_expr [ "??" or_expr ] ;
or_expr     = and_expr { "||" and_expr } ;
and_expr    = bitor_expr { "&&" bitor_expr } ;
bitor_expr  = bitxor_expr { "|" bitxor_expr } ;
bitxor_expr = bitand_expr { "^" bitand_expr } ;
bitand_expr = comparison { "&" comparison } ;
comparison  = shift { ( "==" | "!=" | "<" | ">" | "<=" | ">=" ) shift }
            | expr "is" IDENT [ "." IDENT ] ;                (* enum variant test *)
shift       = additive { ( "<" "<" | ">" ">" ) additive } ;  (* lexed adjacent, never spaced *)
additive    = multiplicative { ( "+" | "-" ) multiplicative } ;
multiplicative = unary { ( "*" | "/" | "%" ) unary } ;
unary       = ( "-" | "!" | "*" | "~" | "&" ) unary | postfix ;
postfix     = primary { "." IDENT [ "(" [ arg_list ] ")" ]  (* field access / method call *)
                      | "[" expr [ ".." expr ] "]"          (* index, or slice *)
                      | "!"                                  (* unwrap Option/Result *)
                      | "?"                                  (* propagate Result *)
                      | "as" type } ;                        (* cast *)
primary     = INT | FLOAT | STRING | FSTRING | CHAR
            | "true" | "false" | "null"
            | IDENT [ "::" type_args ] [ "(" [ arg_list ] ")" ]
            | struct_lit | array_lit | closure | if_expr | match_expr
            | "(" expr ")"
            | expr ".." expr                                 (* range, for-in only *)
            | "@" IDENT "(" STRING ")" ;                     (* @embedFile("path") *)
struct_lit  = IDENT [ type_args ] "{" { IDENT ":" expr [ "," ] } "}" ;
array_lit   = "[" [ expr { "," expr } ] "]" ;
closure     = [ "move" ] "(" [ param_list ] ")" [ ":" type ] "=>" ( expr | block ) ;
if_expr     = "if" expr block "else" block ;                 (* both arms required *)
match_expr  = "match" expr "{" { match_arm } "}" ;
arg_list    = expr { "," expr } ;

(* ── Lexical ── *)
IDENT       = letter { letter | digit } ;
INT         = digit { digit | "_" } | "0x" hexdigit { hexdigit | "_" }
            | "0b" ( "0" | "1" ) { "0" | "1" | "_" } ;
FLOAT       = digit { digit | "_" } "." digit { digit | "_" } [ ( "e" | "E" ) [ "-" ] digit { digit } ] ;
STRING      = '"' { character | escape } '"' ;
FSTRING     = '$' '"' { character | escape | "{" expr "}" } '"' ;
CHAR        = "'" ( character | escape ) "'" ;
letter      = "a".."z" | "A".."Z" | "_" ;
digit       = "0".."9" ;
hexdigit    = digit | "a".."f" | "A".."F" ;
escape      = "\" ( "n" | "t" | "r" | "0" | "\" | '"' | "'" | "{" ) ;
comment     = "//" { character } newline ;
