src/parser.ts
import type { Token } from "./tokens";
import { TokenKind } from "./tokens";
import { Lexer, FSTRING_LBRACE, FSTRING_RBRACE } from "./lexer";
import { ParseError } from "./diagnostics";
import type {
  MiloType, Param, Expr, Stmt, Function, Program, StructDecl, StructField,
  EnumDecl, EnumVariant, Pattern, MatchArm, Span, ImportDecl, CastExpr,
  TraitDecl, TraitMethod, ImplDecl, Attribute, TypeAlias, InterfaceDecl, GlobalDecl,
} from "./ast";

export class Parser {
  private pos = 0;
  private codePointLoopCounter = 0;
  private moduleWrapping = false; // set by a file-level `@!wrapping` directive

  // Builtins that may be written with the `@` sigil in expression position. These
  // are compile-time-only: the compiler, not the runtime, does the work.
  private static SIGIL_BUILTINS = new Set(["embedFile", "targetOs"]);

  // `source`/`filePath` are optional — when provided, thrown ParseErrors carry them
  // so the CLI renders the offending file's source line + caret (essential for errors
  // inside imported files, which would otherwise render against the entry file).
  constructor(private tokens: Token[], private source?: string, private filePath?: string) {}

  private cloneExpr(e: Expr): Expr { return structuredClone(e); }
  // Clamped to the EOF sentinel. A truncated file (`struct P{x:`) lets some
  // production consume EOF as if it were content and walk `pos` past the end;
  // without the clamp the very next lookahead is `undefined.kind`, which reaches
  // the user as a raw TypeError instead of a diagnostic. Every read past the end
  // sees EOF, so the enclosing `expect` reports it properly.
  //
  // `peek` itself needs no bounds test: `advance` below is the only thing that
  // moves `pos`, and it stops on the EOF sentinel, so `pos` is always in range.
  // This is the parser's hottest call — a clamp here costs ~8% of parse time.
  private peek(): Token { return this.tokens[this.pos]!; }
  private peekN(n: number): Token { return this.tokens[Math.min(this.pos + n, this.tokens.length - 1)]!; }
  // adjacent same-kind tokens with no intervening whitespace — used for << and >>
  private atAdjacent(k: TokenKind): boolean {
    const a = this.peek();
    const b = this.peekN(1);
    return a && b && a.kind === k && b.kind === k && a.line === b.line && b.col === a.col + 1;
  }
  // Never advances past EOF, so a loop that keeps consuming on malformed input
  // stalls on the sentinel and hits an `expect` failure instead of running off
  // the array.
  private advance(): Token {
    const tok = this.peek();
    if (this.pos < this.tokens.length - 1) this.pos++;
    return tok;
  }
  private span(tok: Token): Span { return { line: tok.line, col: tok.col, file: this.filePath }; }

  private at(kind: TokenKind): boolean { return this.peek().kind === kind; }

  // `from` and `in` are contextual (soft) keywords: keyword-meaning only in import
  // and for-in position, ordinary identifiers everywhere else (param/var names). The
  // lexer emits them as Ident; these check the keyword role by text.
  private atSoftKw(kw: string): boolean {
    const t = this.peek();
    return t.kind === TokenKind.Ident && t.value === kw;
  }
  private expectSoftKw(kw: string): Token {
    const tok = this.peek();
    if (tok.kind === TokenKind.Ident && tok.value === kw) return this.advance();
    this.error(`expected '${kw}', got '${tok.kind}' ('${tok.value}')`, tok);
  }

  // Whether a token can begin a top-level declaration — the lookahead that lets `pub`
  // stay a soft keyword. Deliberately includes forms `pub` may NOT mark (impl, import):
  // consuming the `pub` there yields a diagnostic naming the real rule, instead of a
  // bare "expected declaration" pointing at the `pub` itself.
  private startsDecl(t: Token): boolean {
    switch (t.kind) {
      case TokenKind.Struct: case TokenKind.Enum: case TokenKind.Extern:
      case TokenKind.Fn: case TokenKind.Trait: case TokenKind.Impl:
      case TokenKind.Type: case TokenKind.Interface: case TokenKind.Let:
      case TokenKind.Var: case TokenKind.Unsafe: case TokenKind.Import:
        return true;
      case TokenKind.Ident:
        return t.value === "thread_local" || t.value === "from";
      default:
        return false;
    }
  }

  private match(kind: TokenKind): Token | null {
    if (this.at(kind)) return this.advance();
    return null;
  }

  private expect(kind: TokenKind): Token {
    const tok = this.advance();
    if (tok.kind !== kind) this.error(`expected '${kind}', got '${tok.kind}' ('${tok.value}')`, tok, kind);
    return tok;
  }

  // Throw a parse error carrying a structured Diagnostic (span + message + hint).
  // `expected`, when given, drives a precise "expected X" hint; a ';' reaching here
  // is mid-expression (trailing/separating ';' is tolerated in parseStmts), so the
  // hint reflects that ';' is a statement separator, not valid inside an expression.
  private error(msg: string, tok: Token, expected?: TokenKind, hintOverride?: string): never {
    let hint = hintOverride;
    if (hint === undefined) {
      if (tok.kind === TokenKind.Semicolon) {
        hint = "';' separates statements and can't appear inside an expression — remove it";
      } else if (expected !== undefined) {
        hint = `expected '${expected}' here`;
      }
    }
    throw new ParseError({
      severity: "error",
      span: { line: tok.line, col: tok.col, file: this.filePath },
      message: msg,
      hint,
      code: "parse",
    }, this.source, this.filePath);
  }

  parse(): Program {
    const structs: StructDecl[] = [];
    const enums: EnumDecl[] = [];
    const functions: Function[] = [];
    const imports: ImportDecl[] = [];
    const traits: TraitDecl[] = [];
    const impls: ImplDecl[] = [];
    const typeAliases: TypeAlias[] = [];
    const interfaces: InterfaceDecl[] = [];
    const globals: GlobalDecl[] = [];
    while (!this.at(TokenKind.Eof)) {
      // trailing ';' after a top-level decl is a cosmetic no-op (see parseStmts)
      if (this.match(TokenKind.Semicolon)) continue;
      // collect attributes before struct/enum; `@!wrapping` is an inner (file-level)
      // directive, not a decl attribute — consume it separately so it never attaches.
      let attrs: Attribute[] | undefined;
      while (this.at(TokenKind.At)) {
        const a = this.parseAttribute();
        if (a.inner) {
          if (a.name !== "wrapping") this.error(`unknown module directive '@!${a.name}' — only '@!wrapping' is supported`, this.peek());
          else if (a.args.length > 0) this.error(`'@!wrapping' takes no arguments`, this.peek());
          else this.moduleWrapping = true;
          continue;
        }
        if (!attrs) attrs = [];
        attrs.push(a);
      }
      // `pub` is a soft keyword, not reserved: it only marks visibility when a
      // declaration actually follows, so a variable or fn named `pub` still parses
      // as an ordinary identifier. Same lookahead trick as `from` below.
      const pubTok = this.atSoftKw("pub") && this.startsDecl(this.peekN(1)) ? this.advance() : undefined;
      // `from` is an import only when followed by the path string; otherwise it's an
      // ordinary identifier (e.g. a top-level binding), so let it fall through.
      if (this.at(TokenKind.Import) || (this.atSoftKw("from") && this.peekN(1).kind === TokenKind.String)) {
        if (pubTok) this.error("'pub' cannot mark an import — it applies to declarations, and an import is not re-exported", pubTok);
        imports.push(this.parseImport());
      } else if (this.at(TokenKind.Struct)) {
        const s = this.parseStruct();
        if (attrs) s.attributes = attrs;
        s.isPub = !!pubTok;
        structs.push(s);
      } else if (this.at(TokenKind.Enum)) {
        const e = this.parseEnum();
        if (attrs) e.attributes = attrs;
        e.isPub = !!pubTok;
        enums.push(e);
      } else if (this.at(TokenKind.Extern)) {
        const nextTok = this.tokens[this.pos + 1];
        if (nextTok && nextTok.kind === TokenKind.Struct) {
          const s = this.parseExternStruct();
          if (attrs) s.attributes = attrs;
          s.isPub = !!pubTok;
          structs.push(s);
        } else if (nextTok && nextTok.kind === TokenKind.Type) {
          const s = this.parseExternType();
          s.isPub = !!pubTok;
          structs.push(s);
        } else {
          const f = this.parseExternFn();
          if (attrs) f.attributes = attrs;
          f.isPub = !!pubTok;
          functions.push(f);
        }
      } else if (this.at(TokenKind.Fn)) {
        const f = this.parseFn();
        if (attrs) f.attributes = attrs;
        f.isPub = !!pubTok;
        functions.push(f);
      } else if (this.at(TokenKind.Trait)) {
        const t = this.parseTraitDecl();
        t.isPub = !!pubTok;
        traits.push(t);
      } else if (this.at(TokenKind.Impl)) {
        if (pubTok) this.error("'pub' cannot mark an impl block — an impl's visibility follows the type it implements", pubTok);
        impls.push(this.parseImplDecl());
      } else if (this.at(TokenKind.Unsafe) && this.peekN(1).kind === TokenKind.Impl) {
        if (pubTok) this.error("'pub' cannot mark an impl block — an impl's visibility follows the type it implements", pubTok);
        this.advance();
        impls.push(this.parseImplDecl(true));
      } else if (this.at(TokenKind.Type)) {
        const t = this.parseTypeAlias();
        t.isPub = !!pubTok;
        typeAliases.push(t);
      } else if (this.at(TokenKind.Interface)) {
        const i = this.parseInterfaceDecl();
        i.isPub = !!pubTok;
        interfaces.push(i);
      } else if (this.at(TokenKind.Let) || this.at(TokenKind.Var)) {
        const g = this.parseGlobalDecl();
        if (attrs) g.attributes = attrs;
        g.isPub = !!pubTok;
        globals.push(g);
      } else if (this.at(TokenKind.Ident) && this.peek().value === "thread_local") {
        const g = this.parseGlobalDecl();
        if (attrs) g.attributes = attrs;
        g.isPub = !!pubTok;
        globals.push(g);
      } else {
        this.error(`expected declaration, got '${this.peek().kind}'`, this.peek());
      }
    }
    // Injected only when a `for .. in ..codePoints()` desugar actually fired.
    // Putting it in the prelude instead would cost every program the parse and
    // check of std/unicode (~10ms on a trivial build) to serve a rare construct.
    if (this.codePointLoopCounter > 0 && !imports.some(i => i.path === "std/unicode")) {
      imports.push({ kind: "ImportDecl", path: "std/unicode", names: ["CodePoint", "decodeCodepoint"] });
    }
    // A file-level `@!wrapping` stamps every one of this module's own (non-extern) fns so it
    // lowers as modular. Kept off `attributes` so the formatter reprints the directive once,
    // not `@wrapping` on every fn. Per-file: only fns parsed here, never imported ones.
    if (this.moduleWrapping) {
      for (const f of functions) if (!f.isExtern) f.fromWrappingModule = true;
    }
    return { structs, enums, functions, imports, traits, impls, typeAliases, interfaces, globals, ...(this.moduleWrapping && { moduleWrapping: true }) };
  }

  private parseImport(): ImportDecl {
    if (this.atSoftKw("from")) {
      const tok = this.advance();
      const pathTok = this.expect(TokenKind.String);
      this.expect(TokenKind.Import);
      // from "path" import { a, b, c }
      this.expect(TokenKind.LBrace);
      const names: string[] = [];
      const aliases: (string | undefined)[] = [];
      let anyAlias = false;
      while (!this.at(TokenKind.RBrace)) {
        names.push(this.expect(TokenKind.Ident).value);
        // `import { foo as bar }` — bind the exported `foo` under local name `bar`.
        // `as` is already a soft keyword (cast); reuse it here in import position.
        if (this.match(TokenKind.As)) {
          aliases.push(this.expect(TokenKind.Ident).value);
          anyAlias = true;
        } else {
          aliases.push(undefined);
        }
        this.match(TokenKind.Comma);
      }
      this.expect(TokenKind.RBrace);
      return { kind: "ImportDecl", path: pathTok.value, names, aliases: anyAlias ? aliases : undefined, span: { line: tok.line, col: tok.col, file: this.filePath } };
    }
    // bare import "path" → error with hint
    if (this.at(TokenKind.Import)) {
      const tok = this.advance();
      const pathTok = this.expect(TokenKind.String);
      this.error(`use 'from "${pathTok.value}" import { ... }'`, tok);
    }
    this.error("expected 'from' import declaration", this.peek());
  }

  // ── Types ──

  private parseType(): MiloType {
    // Bail before the fallback `advance()` below can accept EOF as a type name.
    // Several callers loop until a closing delimiter they will never see in a
    // truncated file, and a parseType that returns without consuming would spin.
    if (this.at(TokenKind.Eof)) this.error("expected a type, but the file ended here", this.peek());
    // &T or &mut T
    if (this.match(TokenKind.Amp)) {
      const isMut = !!this.match(TokenKind.Mut);
      const inner = this.parseType();
      return { ...inner, isRef: !isMut, isRefMut: isMut };
    }
    // *T — count nesting so `**u8` is depth 2, not a collapsed single level.
    // `char***` (depth 3, e.g. _NSGetEnviron) is real; only guard against runaway
    // typos like `********…`. 16 is far past any legitimate use (C99 requires ≥12).
    if (this.at(TokenKind.Star)) {
      const star = this.advance();
      const inner = this.parseType();
      const depth = (inner.ptrDepth ?? (inner.isPtr ? 1 : 0)) + 1;
      if (depth > 16) this.error(`pointer nesting too deep (${depth}); max is 16`, star);
      return { ...inner, isPtr: true, ptrDepth: depth };
    }
    // [T] or [T; N]
    if (this.match(TokenKind.LBracket)) {
      const inner = this.parseType();
      let arraySize: number | null = null;
      if (this.match(TokenKind.Semicolon)) {
        arraySize = parseInt(this.expect(TokenKind.Int).value);
      }
      this.expect(TokenKind.RBracket);
      return { name: inner.name, isPtr: false, isRef: false, isRefMut: false, isArray: true, arraySize };
    }
    // extern (T1, T2) => R — a C function pointer, e.g. the result of dlsym
    if (this.at(TokenKind.Extern)) {
      this.advance();
      const cf = this.parseType();
      if (!cf.isFn) this.error("expected a function type after 'extern'", this.peek());
      return { ...cf, isCFn: true };
    }
    // (T1, T2) => R
    if (this.at(TokenKind.LParen) && this.isFnType()) {
      this.advance();
      const fnParams: MiloType[] = [];
      while (!this.at(TokenKind.RParen)) {
        fnParams.push(this.parseType());
        if (!this.at(TokenKind.RParen)) this.expect(TokenKind.Comma);
      }
      this.expect(TokenKind.RParen);
      this.expect(TokenKind.FatArrow);
      const fnRet = this.parseType();
      return { name: "fn", isFn: true, fnParams, fnRet, isPtr: false, isRef: false, isRefMut: false, isArray: false, arraySize: null };
    }
    const tok = this.advance();
    let typeArgs: MiloType[] | undefined;
    if (this.at(TokenKind.Lt)) {
      this.advance();
      typeArgs = [this.parseType()];
      while (this.match(TokenKind.Comma)) {
        typeArgs.push(this.parseType());
      }
      this.expect(TokenKind.Gt);
    }
    let result: MiloType = { name: tok.value, typeArgs, isPtr: false, isRef: false, isRefMut: false, isArray: false, arraySize: null };
    // i32(0..50000) — range constraint on integer types (must be on same line to avoid ambiguity)
    if (this.at(TokenKind.LParen) && !typeArgs && this.peek().line === tok.line) {
      const isIntType = /^[iu]\d+$|^int$|^byte$/.test(tok.value);
      if (isIntType) {
        this.advance(); // consume (
        let negative = false;
        if (this.match(TokenKind.Minus)) negative = true;
        const minTok = this.expect(TokenKind.Int);
        const rangeMin = (negative ? -1 : 1) * parseInt(minTok.value);
        this.expect(TokenKind.DotDot);
        negative = false;
        if (this.match(TokenKind.Minus)) negative = true;
        const maxTok = this.expect(TokenKind.Int);
        const rangeMax = (negative ? -1 : 1) * parseInt(maxTok.value);
        this.expect(TokenKind.RParen);
        result.rangeMin = rangeMin;
        result.rangeMax = rangeMax;
      }
    }
    // T? desugars to Option<T>
    if (this.match(TokenKind.Question)) {
      result = { name: "Option", typeArgs: [result], isPtr: false, isRef: false, isRefMut: false, isArray: false, arraySize: null };
    }
    return result;
  }

  // ── Type Alias ──

  private parseTypeAlias(): TypeAlias {
    const tok = this.expect(TokenKind.Type);
    const name = this.expect(TokenKind.Ident).value;
    this.expect(TokenKind.Eq);
    const type = this.parseType();
    return { kind: "TypeAlias", name, type, span: this.span(tok) };
  }

  // ── Struct ──

  private parseStruct(): StructDecl {
    this.expect(TokenKind.Struct);
    const name = this.expect(TokenKind.Ident).value;
    const typeParams = this.parseTypeParams();
    this.expect(TokenKind.LBrace);
    const fields: StructField[] = [];
    while (!this.at(TokenKind.RBrace)) {
      // Parsed here even though only `extern struct` fields can carry one: rejecting a
      // field attribute in the grammar would report `expected IDENT, got '@'`, when the
      // checker can say which attribute and why it doesn't belong.
      const fieldAttrs = this.parseFieldAttributes();
      const fieldName = this.expect(TokenKind.Ident).value;
      this.expect(TokenKind.Colon);
      const fieldType = this.parseType();
      fields.push({ name: fieldName, type: fieldType, ...(fieldAttrs ? { attributes: fieldAttrs } : {}) });
      this.match(TokenKind.Comma);
    }
    this.expect(TokenKind.RBrace);
    // Trailing `invariant`/`decreases` clauses — the same position a fn's contracts occupy
    // relative to its signature. `decreases` is meaningless on a type; the checker rejects it
    // rather than the grammar, so the error names the clause instead of the token.
    const invariants = this.parseContracts();
    return { kind: "StructDecl", name, typeParams, fields, ...(invariants.length > 0 && { invariants }) };
  }

  // ── Enum ──

  private parseEnum(): EnumDecl {
    this.expect(TokenKind.Enum);
    const nameTok = this.expect(TokenKind.Ident);
    const name = nameTok.value;
    const typeParams = this.parseTypeParams();
    // `enum Kind: i32 { ... }` — an integer-repr'd (C-like) enum. The repr type is an int
    // sort name; the checker rejects payload-carrying variants on such an enum.
    let reprType: string | undefined;
    if (this.match(TokenKind.Colon)) reprType = this.expect(TokenKind.Ident).value;
    this.expect(TokenKind.LBrace);
    const variants: EnumVariant[] = [];
    while (!this.at(TokenKind.RBrace)) {
      const variantName = this.expect(TokenKind.Ident).value;
      const fields: MiloType[] = [];
      if (this.match(TokenKind.LParen)) {
        while (!this.at(TokenKind.RParen)) {
          fields.push(this.parseType());
          this.match(TokenKind.Comma);
        }
        this.expect(TokenKind.RParen);
      }
      // Optional explicit discriminant `= N` (repr'd enums only; enforced in the checker).
      // Supports sparse/non-contiguous values (`LDA = 169`), which is why tryFrom is generated.
      let discriminant: number | undefined;
      if (this.match(TokenKind.Eq)) {
        const neg = !!this.match(TokenKind.Minus);
        const numTok = this.expect(TokenKind.Int);
        discriminant = (neg ? -1 : 1) * parseInt(numTok.value.replace(/_/g, ""), 10);
      }
      variants.push({ name: variantName, fields, ...(discriminant !== undefined && { discriminant }) });
      this.match(TokenKind.Comma);
    }
    this.expect(TokenKind.RBrace);
    return { kind: "EnumDecl", name, typeParams, variants, ...(reprType && { reprType }), span: { line: nameTok.line, col: nameTok.col, file: this.filePath } };
  }

  // ── Functions ──

  private parseParam(): Param {
    const name = this.expect(TokenKind.Ident).value;
    this.expect(TokenKind.Colon);
    const type = this.parseType();
    return { name, type };
  }

  private parseParamList(): { params: Param[]; variadic: boolean } {
    this.expect(TokenKind.LParen);
    const params: Param[] = [];
    let variadic = false;
    while (!this.at(TokenKind.RParen)) {
      if (this.at(TokenKind.DotDotDot)) {
        this.advance();
        variadic = true;
        break;
      }
      params.push(this.parseParam());
      this.match(TokenKind.Comma);
    }
    this.expect(TokenKind.RParen);
    return { params, variadic };
  }

  private parseReturnType(): MiloType {
    if (this.match(TokenKind.Colon)) return this.parseType();
    return { name: "void", isPtr: false, isRef: false, isRefMut: false, isArray: false, arraySize: null };
  }

  private parseExternFn(): Function {
    this.expect(TokenKind.Extern);
    this.expect(TokenKind.Fn);
    const nameTok = this.expect(TokenKind.Ident);
    const name = nameTok.value;
    const { params, variadic } = this.parseParamList();
    const retType = this.parseReturnType();
    return { kind: "Function", name, typeParams: [], params, retType, contracts: [], body: [], isExtern: true, isVariadic: variadic, span: this.span(nameTok) };
  }

  private parseExternType(): StructDecl {
    this.expect(TokenKind.Extern);
    this.expect(TokenKind.Type);
    const name = this.expect(TokenKind.Ident).value;
    return { kind: "StructDecl", name, typeParams: [], fields: [], isExtern: true, isOpaque: true };
  }

  private parseExternStruct(): StructDecl {
    const start = this.peek();
    this.expect(TokenKind.Extern);
    this.expect(TokenKind.Struct);
    const name = this.expect(TokenKind.Ident).value;
    const typeParams = this.parseTypeParams();
    if (typeParams.length > 0) this.error(`extern structs cannot have type parameters`, this.peek());
    this.expect(TokenKind.LBrace);
    const fields: StructField[] = [];
    while (!this.at(TokenKind.RBrace)) {
      const fieldAttrs = this.parseFieldAttributes();
      const fieldName = this.expect(TokenKind.Ident).value;
      this.expect(TokenKind.Colon);
      const fieldType = this.parseType();
      fields.push({ name: fieldName, type: fieldType, ...(fieldAttrs ? { attributes: fieldAttrs } : {}) });
      this.match(TokenKind.Comma);
    }
    this.expect(TokenKind.RBrace);
    return { kind: "StructDecl", name, typeParams: [], fields, isExtern: true, span: this.span(start) };
  }

  private parseFn(): Function {
    this.expect(TokenKind.Fn);
    const nameTok = this.expect(TokenKind.Ident);
    const name = nameTok.value;
    const typeParams = this.parseTypeParams();
    const { params, variadic } = this.parseParamList();
    const retType = this.parseReturnType();
    const contracts = this.parseContracts();
    this.expect(TokenKind.LBrace);
    const body = this.parseStmts();
    this.expect(TokenKind.RBrace);
    return { kind: "Function", name, typeParams, params, retType, contracts, body, isExtern: false, isVariadic: variadic, span: this.span(nameTok) };
  }

  private parseContracts(): import("./ast").Contract[] {
    const contracts: import("./ast").Contract[] = [];
    while (this.at(TokenKind.Requires) || this.at(TokenKind.Ensures)
        || this.at(TokenKind.Invariant) || this.at(TokenKind.Decreases)) {
      const s = this.span(this.peek());
      const kind = this.advance().value as "requires" | "ensures" | "invariant" | "decreases";
      const expr = this.parseExpr();
      contracts.push({ kind, expr, span: s });
    }
    return contracts;
  }

  private parseTypeParams(): import("./ast").TypeParam[] {
    const typeParams: import("./ast").TypeParam[] = [];
    if (this.match(TokenKind.Lt)) {
      typeParams.push(this.parseOneTypeParam());
      while (this.match(TokenKind.Comma)) {
        typeParams.push(this.parseOneTypeParam());
      }
      this.expect(TokenKind.Gt);
    }
    return typeParams;
  }

  private parseOneTypeParam(): import("./ast").TypeParam {
    const name = this.expect(TokenKind.Ident).value;
    const bounds: string[] = [];
    if (this.match(TokenKind.Colon)) {
      bounds.push(this.expect(TokenKind.Ident).value);
      while (this.match(TokenKind.Plus)) {
        bounds.push(this.expect(TokenKind.Ident).value);
      }
    }
    return { name, bounds };
  }
